--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -3,6 +3,8 @@ on: [push]
 jobs:
   build_latex:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v3
@@ -15,7 +17,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: Upload PDF artifact
+          name: pdf-files
           path: |
             *.pdf
       - name: Generate release tag
@@ -23,12 +25,11 @@ jobs:
         uses: alexvingg/next-release-tag@v1.0.4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          tag_prefix: ''
-      - name: Create Release
-        uses: ncipollo/release-action@v1.13.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag_prefix: ''   
+      - name: Release
+        uses: softprops/action-gh-release@v1
         with:
-          artifacts: "*.pdf"
-          tag: ${{ steps.generate_release_tag.outputs.release_tag }}
+          tag_name: ${{ steps.generate_release_tag.outputs.release_tag }}
           name: Release ${{ steps.generate_release_tag.outputs.release_tag }}
+          files: |
+            *.pdf
